# flask-saas-app

./: Dockerfile  docker-compose.yml  notes.md  pyproject.toml  requirements.txt
src/snakeeyes/: app.py
src/snakeeyes/blueprints/page/: __init__.py
src/snakeeyes/blueprints/page/templates/page/: faq.html
src/snakeeyes/tests/: conftest.py
src/snakeeyes/tests/page/: test_views.py
