[tool.poetry]
name = "saas-app"
version = "0.1.0"
description = ""
authors = ["Andrew Casey <accasey@hotmail.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
saas-app = "src.snakeeyes.app:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
